* Improve performance of derive() operations to compensate for the
  regression introduced in HARP 1.26.

1.26 2025-07-09
~~~~~~~~~~~~~~~

* Added support for Sentinel-5 L2.

* Added derivations to retrieve (dry) air column number density from
  species column number density and species (dry air) volume mixing ratio.

* Added derivations to treat vertical profiles of volume mixing ratios
  and partial column profiles of column volume mixing ratios as equal.

* Added 'invalid()' operation to allow filtering on invalid values.

* Fixed memory corruption issue in rebinning algorithm.

* Fixed issue where 'index(dimension)' operation would not get applied
  correctly when reading data via an ingestion module, the dimension for
  the index filter was not time, and it was combined with another filter.

* Updates to product ingestions:
  - EarthCARE L1: fixed TIR band ingestion options for MSI_NOM_1B.
  - EarthCARE L2: fixed typo in variable name for MSI_AOT_2A.
  - S5P L1B: added systematic and random uncertainty variables.
  - S5P L2 O3 TCL: fixed unit of mixing ratios (ppbv -> ppv).

1.25 2025-03-16
~~~~~~~~~~~~~~~

* The rebin() operation now takes into account existing weight variables
  and properly handles angle variables. Rebinning the result of a
  bin_spatial() operation to a lower resolution now gives the same result
  as when a spatial bin was performed directly to that lower resolution.

* Added harp_convert_unit_double() and harp_convert_unit_float().
  harp_convert_unit() is now deprecated.

* Performing a unit conversion on single precision floating point
  variables will no longer convert the variable to double precision.

* Updates to product ingestions:
  - GOME2 L2: added support for NHP/OHP ozone profile products and all
    products now use float instead of double for variables.
  - GEOMS FTIR: reinterpret vmr from old GEOMS templates as dry air vmr.
  - EarthCARE L1: add support for L1 ATLID, BBR, and MSI products.